--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="normal" style="display: none">
 
           <audio id="audio" controls style="display:none">
-            <source src="./type-sound.mp3" type="audio/mpeg"> Your browser does not support the audio element.
+            <source src="assets/type-sound.mp3" type="audio/mpeg"> Your browser does not support the audio element.
           </audio>
         </div>
         
