--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <p>Terminal <span class="portfolio_top">Portfolio</span></p>
         <p>[<span id="datetime"></span>]</p>
       </div>
- 
+    <div class="uvod">
       <p>┌=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-┐</p>       
       <p>|&nbsp;&nbsp;&nbsp;____&nbsp;&nbsp;&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___&nbsp;&nbsp;&nbsp;&nbsp;_&nbsp;&nbsp;__&nbsp;&nbsp;__ &nbsp;|</p>
       <p>|&nbsp;  |_   _|&nbsp;&nbsp;/ \&nbsp;&nbsp;&nbsp;| - \&nbsp;&nbsp;| | | |/ /     &nbsp;|</p>
       <p>|&nbsp;&nbsp;        | |&nbsp;&nbsp;/ _ \&nbsp;&nbsp;| _ /&nbsp;&nbsp;| | |&nbsp;&nbsp;&nbsp;\    &nbsp;&nbsp;|</p>
       <p>|&nbsp;&nbsp;   |_|  /_/ \_\ |_|\_\ |_| |_|\__\    |</p>
-      <p>|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[v.2.2.5]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</p>
+      <p>|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[v.2.2.6]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</p>
       <p>└=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-┘ </p>
  
         <h3>Copyright (c) 2021 Tarik Rovcanin <<a class="linkedin" href="https://www.linkedin.com/in/tarik-rovcanin/">linkedin</a>><<a class="linkedin" href="mailto:tarik.rovcan@gmail.com">email</a>></h3></h3>
@@ -34,7 +34,7 @@
         <h3>Welcome to my terminal portfolio</h3>
         <h3>
           Documentation: type <span><b>'help'</b></span>.
-          
+      </div> 
         </h3>
         <main>
           <form id="command">
