--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html lang="en">
   <head>
 
+    <!--Microsoft clarity-->
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "9vuohb1i3w");
+    </script>
     <!-- Hotjar Tracking Code for Terminal Portfolio -->
     <script>
     (function(h,o,t,j,a,r){
@@ -97,9 +105,9 @@
               autofocus
               
             />
-            <audio id="audio" controls style="display:none">
+            <!-- <audio id="audio" controls style="display:none">
               <source src="/assets/mixkit-hard-single-key-press-in-a-laptop-2542.wav" type="audio/mpeg"> Your browser does not support the audio element.
-            </audio>
+            </audio> -->
 
 
           </div>
