--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       })(window, document, "clarity", "script", "9vuohb1i3w");
     </script>
     <!-- Hotjar Tracking Code for Terminal Portfolio -->
-    <script>
+    <!-- <script>
     (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
       h._hjSettings={hjid:2743810,hjsv:6};
@@ -19,7 +19,7 @@
       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
       a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+    </script> -->
 
 
 
