--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
 
     <!--Microsoft clarity-->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       (function(c,l,a,r,i,t,y){
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
           t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "9vuohb1i3w");
-    </script>
+    </script> -->
     
 
 
